--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -19,23 +19,23 @@ jobs:
           python-version: 3.11
 
       - name: Display Python version
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
+        # uses: actions/setup-python@v4
+        # with:
+        #   python-version: 3.11
         run: |
           python --version
       - name: Install dependencies
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
+        # uses: actions/setup-python@v4
+        # with:
+        #   python-version: 3.11
         run: |
           python -m pip install huggingface_hub
           python download.py
 
       - name: Setup Dockerfile
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
+        # uses: actions/setup-python@v4
+        # with:
+        #   python-version: 3.11
         run: |
           python write_dockerfile.py
       
