--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -55,7 +55,7 @@ jobs:
           password: ${{ secrets.docker_password }}
 
       - name: Build Docker image
-        use: docker/build-push-action@v5
+        uses: docker/build-push-action@v5
         with:
           push: true
           platforms: linux/amd64
