--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -46,6 +46,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: prepare_model
     steps:
+      - uses: actions/checkout@v4
       - name: Checkout code
         uses: actions/checkout@v2
 
