--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -33,12 +33,7 @@ jobs:
           python -m pip install huggingface_hub
           python download.py
 
-      - name: Setup Dockerfile
-        # uses: actions/setup-python@v4
-        # with:
-        #   python-version: 3.11
-        run: |
-          python write_dockerfile.py
+      
       
   
 
@@ -49,6 +44,13 @@ jobs:
       - uses: actions/checkout@v4
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Setup Dockerfile
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+        run: |
+          python write_dockerfile.py
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
