--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -41,9 +41,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: prepare_model
     steps:
-      - uses: actions/checkout@v4
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
 
       - name: Setup Dockerfile
         with:
