--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -66,6 +66,8 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
+          context: .
+          file: Dockerfile
           push: true
           platforms: linux/amd64
           tags: ${{ secrets.docker_username }}/${{ env.MODEL_NAME_LOWER }}:latest
