--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -31,6 +31,9 @@ jobs:
         #   python-version: 3.11
         run: |
           python -m pip install huggingface_hub
+      
+      - name: Download model
+        run: |
           python download.py
 
       - name: Checkout code
