Fix: Docker no let space

--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -54,9 +54,11 @@ jobs:
       - name: To lower case
         run: |
           echo "MODEL_NAME_LOWER=$(echo '${{ env.MODEL_NAME }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-      
-      - name: List files
-        run: ls -R
+
+      - name: Remove unnecessary files
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
 
       - name: Build Docker image
         uses: docker/build-push-action@v5
