--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -45,6 +45,21 @@ jobs:
         run: |
           python write_dockerfile.py
 
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tool-cache: true
+          # all of these default to true, but feel free to set to
+          # "false" if necessary for your workflow
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
