--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -19,47 +19,9 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Display Python version
-        # uses: actions/setup-python@v4
-        # with:
-        #   python-version: 3.11
-        run: |
-          python --version
-      - name: Install dependencies
-        # uses: actions/setup-python@v4
-        # with:
-        #   python-version: 3.11
-        run: |
-          python -m pip install huggingface_hub
-      
-      - name: Download model
-        run: |
-          python download.py
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-
-      - name: Setup Dockerfile
+      - name: Set up Dockerfile
         run: |
           python write_dockerfile.py
-
-      - name: Free Disk Space (Ubuntu)
-        uses: jlumbroso/free-disk-space@main
-        with:
-          # this might remove tools that are actually needed,
-          # if set to "true" but frees about 6 GB
-          tool-cache: true
-          # all of these default to true, but feel free to set to
-          # "false" if necessary for your workflow
-          android: true
-          dotnet: true
-          haskell: true
-          large-packages: true
-          docker-images: true
-          swap-storage: true
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -70,11 +32,6 @@ jobs:
         run: |
           echo "MODEL_NAME_LOWER=$(echo '${{ env.MODEL_NAME }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
-      - name: Remove unnecessary files
-        run: |
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
@@ -83,10 +40,68 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: ${{ secrets.docker_username }}/${{ env.MODEL_NAME_LOWER }}:latest
-          # build-args: |
-          #   HF_TOKEN=${{secrets.HUGGINGFACE_TOKEN
 
+      # - name: Display Python version
+      #   # uses: actions/setup-python@v4
+      #   # with:
+      #   #   python-version: 3.11
       #   run: |
-      #     docker build -t ${{secrets.docker_username}}/${{env.MODEL_NAME}}:latest . 
-      # - 
-          
+      #     python --version
+      # - name: Install dependencies
+      #   # uses: actions/setup-python@v4
+      #   # with:
+      #   #   python-version: 3.11
+      #   run: |
+      #     python -m pip install huggingface_hub
+      
+      # - name: Download model
+      #   run: |
+      #     python download.py
+      
+      # - name: Set up Python
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: 3.11
+
+      # - name: Setup Dockerfile
+      #   run: |
+      #     python write_dockerfile.py
+
+      # - name: Free Disk Space (Ubuntu)
+      #   uses: jlumbroso/free-disk-space@main
+      #   with:
+      #     # this might remove tools that are actually needed,
+      #     # if set to "true" but frees about 6 GB
+      #     tool-cache: true
+      #     # all of these default to true, but feel free to set to
+      #     # "false" if necessary for your workflow
+      #     android: true
+      #     dotnet: true
+      #     haskell: true
+      #     large-packages: true
+      #     docker-images: true
+      #     swap-storage: true
+
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.docker_username }}
+      #     password: ${{ secrets.docker_password }}
+
+      # - name: To lower case
+      #   run: |
+      #     echo "MODEL_NAME_LOWER=$(echo '${{ env.MODEL_NAME }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+      # - name: Remove unnecessary files
+      #   run: |
+      #     sudo rm -rf /usr/share/dotnet
+      #     sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
+      # - name: Build Docker image
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: .
+      #     file: Dockerfile
+      #     push: true
+      #     platforms: linux/amd64
+      #     tags: ${{ secrets.docker_username }}/${{ env.MODEL_NAME_LOWER }}:latest
