--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -3,7 +3,8 @@ env:
   HF_TOKEN: ${{secrets.HUGGINGFACE_TOKEN}}
   REPO_NAME: meta-llama
   MODEL_NAME: Llama-3.2-3B-Instruct
-  DOCKER_IMAGE: nvcr.io/nvidia/tritonserver:24.12-vllm-python-py3
+  # DOCKER_IMAGE: nvcr.io/nvidia/tritonserver:24.12-vllm-python-py3
+  DOCKER_IMAGE: hieupth/tritonserver24.12-vllm
 
 on:
   push:
