Fix: typo image

--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -4,7 +4,7 @@ env:
   REPO_NAME: meta-llama
   MODEL_NAME: Llama-3.2-3B-Instruct
   # DOCKER_IMAGE: nvcr.io/nvidia/tritonserver:24.12-vllm-python-py3
-  DOCKER_IMAGE: hieupth/tritonserver24.12-vllm
+  DOCKER_IMAGE: hieupth/tritonserver:24.12-vllm
 
 on:
   push:
@@ -33,7 +33,7 @@ jobs:
         run: |
           echo "MODEL_NAME_LOWER=$(echo '${{ env.MODEL_NAME }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
-        # - name: Free Disk Space (Ubuntu)
+      - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
         with:
           # this might remove tools that are actually needed,
