--- a/.github/workflows/download.yaml
+++ b/.github/workflows/download.yaml
@@ -1,10 +1,12 @@
 name: donwload_models
 env:
   HF_TOKEN: ${{secrets.HUGGINGFACE_TOKEN}}
-  REPO_NAME: meta-llama
-  MODEL_NAME: Llama-3.2-3B-Instruct
+  REPO_NAME: LLaMAX
+  MODEL_NAME: LLaMAX3-8B-Alpaca
   # DOCKER_IMAGE: nvcr.io/nvidia/tritonserver:24.12-vllm-python-py3
-  DOCKER_IMAGE: hieupth/tritonserver:24.12-vllm
+  TAG: 24.12-vllm
+  DOCKER_IMAGE: hieupth/tritonserver:${TAG}
+
 
 on:
   push:
@@ -72,7 +74,7 @@ jobs:
           file: Dockerfile
           push: true
           platforms: linux/amd64
-          tags: ${{ secrets.docker_username }}/${{ env.MODEL_NAME_LOWER }}:latest
+          tags: ${{ secrets.docker_username }}/${{ env.MODEL_NAME_LOWER }}:{{ env.TAG }}
 
       # - name: Display Python version
       #   # uses: actions/setup-python@v4
